--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Aws": {
+    "QueueUrl": "https://sqs.us-west-1.amazonaws.com/726238976559/pi-webcam-queue",
+    "BucketName": "garage-pi-webcam-images"
+  }
 }
