--- a/garage-webcam-api.csproj
+++ b/garage-webcam-api.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.8.7" />
+    <PackageReference Include="AWSSDK.SQS" Version="3.7.2.32" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
